--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="welcome to my portfolio website!!" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>hima's portfolio!</title>
     <link href="/portfolio/static/css/main.1cf7c06e.chunk.css" rel="stylesheet">
 </head>
 
