--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="welcome to my portfolio website!!" />
     <link rel="apple-touch-icon" href="/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="manifest" href="portfolio/manifest.json" />
     <title>hima's portfolio!</title>
     <link href="/portfolio/static/css/main.1cf7c06e.chunk.css" rel="stylesheet">
 </head>
